refactor(backend): 商品域架构收敛——common 拆 core/domain